--- a/app/src/main/res/layout/authorize_layout.xml
+++ b/app/src/main/res/layout/authorize_layout.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/header_text_size"
             android:textStyle="bold"
-            android:text="Setup Adobe Auth:"/>
+            android:text="Authorize info here"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -34,17 +34,15 @@
             android:textColor="@color/colorAccent"
             android:textAlignment="center"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text_size"
-            android:textStyle="bold"
-            android:text="Setup Adobe Media Info:"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/btn_authorize_ok"
