Authorize now works. It will print out simple success or failure text on main activity. Will add dialogs for failures later.

--- a/app/src/main/res/layout/authorize_layout.xml
+++ b/app/src/main/res/layout/authorize_layout.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/header_text_size"
             android:textStyle="bold"
+            android:layout_marginTop="@dimen/descriptions_size"
             android:text="Authorize info here"/>
 
         <TextView
@@ -31,23 +32,27 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:text="_________________________________________"
+            android:layout_marginTop="@dimen/descriptions_size"
             android:textColor="@color/colorAccent"
             android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/btn_auth_authorize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/descriptions_size"
+            android:text="Click Here to Authorize"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/descriptions_size">
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/btn_authorize_ok"
-                style="@style/ButtonStyle"
-                android:text="OK"/>
 
             <Button
                 android:id="@+id/btn_authorize_back"
