--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -49,6 +49,27 @@
                 android:textAlignment="center"
                 android:paddingTop="@dimen/descriptions_size"/>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/descriptions_size">
+                <TextView
+                    android:id="@+id/mvpd_login_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/form_text_size"
+                    android:text="Login Status: "/>
+
+                <TextView
+                    android:id="@+id/login_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/header_text_size"
+                    android:text="@string/login_status_not_logged"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btn_login_select_mvpd"
                 android:layout_width="match_parent"
@@ -56,6 +77,26 @@
                 android:layout_marginTop="@dimen/descriptions_size"
                 android:text="Select Mvpd Here"/>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/descriptions_size">
+                <TextView
+                    android:id="@+id/mvpd_provider_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/form_text_size"
+                    android:text="MVPD Selected: "/>
+
+                <TextView
+                    android:id="@+id/login_provider"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/header_text_size"
+                    android:text="@string/mvpd_id_not_selected"
+                    android:textStyle="bold"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
