LEAPP-4874 Added Error checks for authorize. Renamed OK button in login page to LOGIN.

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -134,7 +134,7 @@
                 <Button
                     android:id="@+id/btn_login_ok"
                     style="@style/ButtonStyle"
-                    android:text="OK"/>
+                    android:text="LOGIN"/>
 
                 <Button
                     android:id="@+id/btn_login_back"
