LEAPP-4874 Added a logcat view in MainActivity to visually see some log outputs on the UI. Removed BrowseLiveData button in Setup Adobe Config and linked the browse button in Setup Media Info to a url containing nbc sports media info data.

--- a/app/src/main/res/layout/adobe_config_layout.xml
+++ b/app/src/main/res/layout/adobe_config_layout.xml
@@ -31,10 +31,10 @@
                 style="@style/ButtonStyle"
                 android:text="@string/generate_sample_data"/>
 
-            <Button
-                android:id="@+id/btn_adobe_config_browse"
-                style="@style/ButtonStyle"
-                android:text="@string/browse_live_data"/>
+            <!--<Button-->
+                <!--android:id="@+id/btn_adobe_config_browse"-->
+                <!--style="@style/ButtonStyle"-->
+                <!--android:text="@string/browse_live_data"/>-->
 
             <Button
                 android:id="@+id/btn_adobe_config_clear"
