--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,10 +6,17 @@
         android:id="@+id/action_adobe_clientless"
         android:orderInCategory="100"
         android:title="@string/about_clientless"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false"/>
     <item
         android:id="@+id/action_show_logcat"
         android:orderInCategory="100"
         android:title="@string/show_logcat"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_clear_logcat"
+        android:orderInCategory="100"
+        android:title="@string/clear_logcat"
         app:showAsAction="never" />
 </menu>
