LEAPP-4874 Fixed layout of main activity shown with logcat. Fixed temp pass expire date so that it is converted from epoch time to a readable date. Code clean up: Removed code that is not used, added extra documents and comments and logs.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
 
     <dimen name="premium_logo_width">113dp</dimen>
     <dimen name="premium_logo_height">60dp</dimen>
+
+    <dimen name="logcat_height">200dp</dimen>
 </resources>
