--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <ScrollView
+            android:id="@+id/main_activity_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -283,13 +284,25 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/empty_view_for_logcat"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/logcat_height"
+                    android:visibility="gone">
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
 
         <LinearLayout
             android:id="@+id/logcat"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="@dimen/logcat_height"
             android:orientation="vertical"
             android:layout_gravity="center|bottom"
             android:visibility="gone"
@@ -306,7 +319,7 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/logcat_height"
                 android:background="@color/cardview_dark_background">
                 <LinearLayout
                     android:layout_width="match_parent"
