LEAPP-4874 Added a Search function for MVPD List View.

--- a/app/src/main/res/layout/fragment_provider_picker.xml
+++ b/app/src/main/res/layout/fragment_provider_picker.xml
@@ -17,6 +17,12 @@
             android:layout_height="50dp"
             android:orientation="horizontal">
 
+            <SearchView
+                android:id="@+id/frag_provider_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search"/>
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
